--- a/JenniferDuffDesign_Desktop.css
+++ b/JenniferDuffDesign_Desktop.css
@@ -420,7 +420,7 @@ header nav a div{
 #portfolioContainer {
     width: 100%;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: auto;
     grid-column-gap: 3vw;
     grid-row-gap: 3.70vw;
@@ -429,7 +429,7 @@ header nav a div{
 .projects{
     border: 1px solid black;
     margin: 0;
-    width: 24vw;
+    width: 1fr;
     height: 24vw;
     background-repeat: no-repeat;
     background-origin: border-box;
@@ -456,7 +456,7 @@ header nav a div{
     align-items: flex-start;
     transition: opacity 0.4s ease-in-out;
     height: 24vw;
-    padding: 10%;
+    padding: 7%;
     box-sizing: border-box;
     opacity: 0;
     background: var(--baseYellow);
@@ -467,14 +467,9 @@ header nav a div{
 .projectTitle {
     font-family: var(--sansSerifFont);;
     font-size: 30pt;
-    margin: 0 0 30px 0;
+    margin: 0 0 20px 0;
     width: 100%;
     line-height: 100%;
-}
-
-.projectLangs{
-    margin: 0;
-    flex-wrap: wrap;
 }
 
 .langsList{
@@ -485,23 +480,28 @@ header nav a div{
     line-height: 125%;
 }
 
+.projectDescription{
+    font-size: 11.75pt;
+    line-height: 140%;
+}
+
 .linksContainer{
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
-    width: auto;
     height: auto;
     justify-content: center;
-    align-items: flex-start;
+    align-items: flex-end;
     width: 100%;
+    float: right;
 }
 
 .projects a{
     box-sizing: border-box;
     text-decoration: none;
     text-align: left;
-    height: 34px;
-    width: 34px;
+    height: 25px;
+    width: 25px;
     background-clip: padding-box;
     background-size: contain;
     background-position: center;
@@ -553,25 +553,26 @@ header nav a div{
     justify-content: flex-start;
     transition: opacity 0.2s ease-in-out;
     width: 100%;
+    margin: 0 0px 0 2.5px;
 }
 
 .triangle{
     opacity: 0.95;
     height: 8px;
-    transform: rotate(90deg);
+    transform: rotate(-90deg);
     transition: opacity 0.2s ease-in-out;
-    margin: 0 0 0px -4.75px;
+    margin: 0 0 0px 0px;
     /* left: 12.5px; */
 }
 
 .linkText{
     font-family: var(--serifFont);
     font-weight: 300;
-    font-size: 8pt;
+    font-size: 7.5pt;
     background-color:rgb(0, 0, 0);
     color: white;
-    padding: 5px 9px 6px 9px;
-    margin: 0 0 1px 0;
+    padding: 5px 9px 5.25px 9px;
+    margin: 0 -0 0 -4.75px;
     opacity: 0.95;
 }
 
