added luma img to portfolio

--- a/JenniferDuffDesign_Desktop.css
+++ b/JenniferDuffDesign_Desktop.css
@@ -583,7 +583,7 @@ header nav a div{
 }
 
 .projects:nth-child(2){
-    background-image: url('Assets/portfolioImgs/portfolio4_square.jpg')
+    background-image: url('Assets/portfolioImgs/Luma.png')
 }
 
 .projects:nth-child(3){
