--- a/JenniferDuffDesign_Desktop.css
+++ b/JenniferDuffDesign_Desktop.css
@@ -125,12 +125,12 @@ button:active {
 }
 
 #headerNav {
-    width: 323px;
-    height: 20px;
+    width: auto;
+    height: 15px;
     display: grid;
-    grid-template-columns: 3.1rem 4.6rem 3.2rem 4.1rem;
+    grid-template-columns: 3.1rem 4.6rem 3.2rem 4.1rem 80px;
     grid-column-gap: 20px;
-    margin: 0;
+    margin: 0 20px 0 0;
     padding: 0;
     text-align: center;
     vertical-align: baseline;
@@ -138,11 +138,11 @@ button:active {
 }
 
 header nav a {
-    text-decoration: none;
+    text-decoration: none !important;
     color: black;
     font-weight: 700;
     font-family: var(--sansSerifFont);;
-    font-size: 1.1rem;
+    font-size: 13pt;
     text-align: center;
     vertical-align: baseline;
     transition: background-color 0.3s ease-in-out;
@@ -186,6 +186,24 @@ header nav a div{
     #contactLink div{
         width: 4.1rem;
     }
+
+    #resumeLink{
+        font-family: var(--serifFont);
+        font-size: 10pt;
+        letter-spacing: 2px;
+        font-weight: 300;
+        border: 2px solid var(--baseYellow);
+        padding: 3px 0 0 0 ;
+        height: 20px;
+    }
+
+    #resumeLink:hover a{
+        font-weight: 300;   
+    }
+
+    /* #resumeLink div{
+        width: 4.1rem;
+    } */
 
 
 /* ------------------- SplashBox ------------------- */
@@ -469,20 +487,26 @@ header nav a div{
     font-size: 30pt;
     margin: 0 0 20px 0;
     width: 100%;
-    line-height: 100%;
+    line-height: 110%;
 }
 
 .langsList{
     font-size: 10pt;
     letter-spacing: 3px;
-    font-weight: 300;
+    font-weight: 200;
     margin: 0;
     line-height: 125%;
 }
 
 .projectDescription{
+    font-family: var(--sansSerifFont);
+    font-weight: 400;
     font-size: 11.75pt;
     line-height: 140%;
+}
+
+.functionalities{
+    font-weight: 600;
 }
 
 .linksContainer{
@@ -577,30 +601,31 @@ header nav a div{
 }
 
 
-
+/*ScheduleBooker background*/
 .projects:nth-child(1){
-    background-image: url('Assets/portfolioImgs/portfolio6_square.png');
+    background-image: url('Assets/portfolioImgs/scheduleBooker.png');
+    background-size: cover;
 }
 
+/*TermTracker background*/
 .projects:nth-child(2){
-    background-image: url('Assets/portfolioImgs/Luma.png')
+    background-image: url('Assets/portfolioImgs/termTrackerImg.png');
+    background-size: cover;
 }
 
+
+/*Luma background*/
 .projects:nth-child(3){
-    background-image: url('Assets/portfolioImgs/portfolio7_square.jpg')
+    background-image: url('Assets/portfolioImgs/Luma.png');
+    background-size: cover;
+    background-position: center;
 }
 
+/*WeatherChecker background*/
 .projects:nth-child(4){
-    background-image: url('Assets/portfolioImgs/weatherAppScreenshot.png')
+    background-image: url('Assets/portfolioImgs/weatherAppScreenshot.png');
+    background-size: cover;
 }
-
-/* .projects:nth-child(5){
-    background-image: url()
-}
-
-.projects:nth-child(6){
-    background-image: url('Assets/portfolioImgs//portfolio3_square.jpg')
-} */
 
 #CircleOutlineSolid2{
     width: 100px;
@@ -797,8 +822,11 @@ h3{
 } */
 
 
+#resumeSection{
+    padding-top: 125px;
+}
+
 #resumeHeader{
-    margin-top: 125px;
     margin-bottom: 20px;
 }
 
@@ -810,7 +838,7 @@ h3{
     margin: -5px 0 20px 0;
 }
 
-#resumeLink{
+#resumePDFLink{
     appearance: none;
     color: black;
     font-weight: 400;
@@ -823,7 +851,7 @@ h3{
     margin: 0 0 0 8px;
 }
 
-#resumeLink:hover{
+#resumePDFLink:hover{
     text-decoration: 2.5px solid underline var(--drkYellow);
     font-weight: 500;
 }
