--- a/JenniferDuffDesign_Desktop.css
+++ b/JenniferDuffDesign_Desktop.css
@@ -867,7 +867,7 @@ h3{
 #resume{
     border: 2px solid black;
     box-shadow: 10px 10px 0 var(--baseYellow);
-    padding: 5%;
+    padding: 0;
     width: 800px;
     margin: 0 auto;
 }
