--- a/JenniferDuffDesign_Desktop.css
+++ b/JenniferDuffDesign_Desktop.css
@@ -872,6 +872,11 @@ h3{
     margin: 0 auto;
 }
 
+.viewSDK_hideOverflow{
+    padding: 0;
+    margin: 0;
+}
+
 #resume h5{
     font-family: var(--sansSerifFont);;
     font-weight: 900;
