--- a/JenniferDuffDesign_Desktop.css
+++ b/JenniferDuffDesign_Desktop.css
@@ -23,6 +23,7 @@ body {
 }
 
 main {
+    box-sizing: border-box;
     margin: 0;
     padding: 0 10vw;
     display: flex;
@@ -90,8 +91,8 @@ button:active {
     justify-content: space-between;
     align-items: flex-end;
     width: 100%;
-    /* height: 60px; */
     position: fixed;
+    top: 0;
     background-color: white;
     margin: 0;
     padding: 20px 0 20px 17px; 
@@ -101,7 +102,6 @@ button:active {
 }
 
 #extraUnderline{
-    display: none; /* TODO: REMOVE FOR PRODUCTION*/
     width: calc(100% + 10px);
     background-color: #ffbf47;
     height: 1px;
